--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         }
     ],
     "require": {
-        "php" : "~7.2"
+        "php": "~7.2",
+        "symfony/panther": "^0.8.0",
+        "symfony/var-dumper": "^5.1"
     },
     "require-dev": {
         "phpunit/phpunit" : ">=8.0",
