--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -17,10 +17,10 @@ jobs:
       run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF:10}
 
     - name: Build image
-      run: docker build -t docker.pkg.github.com/sigmie/crawler/crawler:$RELEASE_VERSION .
+      run: docker build -t docker.pkg.github.com/sigmie/crawler/crawler:${RELEASE_VERSION:1} .
 
     - name: Authenticate docker
       run: docker login docker.pkg.github.com --username nicoorfi --password ${{ secrets.GITHUB_TOKEN }}
 
     - name: Push images
-      run:  docker push docker.pkg.github.com/sigmie/crawler/crawler:$RELEASE_VERSION
+      run:  docker push docker.pkg.github.com/sigmie/crawler/crawler:${RELEASE_VERSION:1}
