--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
         }
     ],
     "require": {
-        "php": "~7.2",
-        "phpstan/phpstan": "^0.12.49",
+        "php": "^7.4 || ^8.0"
         "symfony/console": "^5.1",
         "symfony/panther": "^0.8.0",
-        "symfony/var-dumper": "^5.1"
     },
     "require-dev": {
+        "symfony/var-dumper": "^5.1",
+        "phpstan/phpstan": "^0.12.49",
         "phpunit/phpunit" : ">=8.0",
         "squizlabs/php_codesniffer": "^3.0"
     },
