--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,18 +9,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
-    - name: Get Composer Cache Directory
-      id: composer-cache
-      run: |
-        echo "::set-output name=dir::$(composer config cache-files-dir)"
-
-    - name: Cache Composer Downloads
-      uses: actions/cache@v1
-      with:
-       path: ${{ steps.composer-cache.outputs.dir }}
-       key: composer-${{ hashFiles('**/composer.json') }}
-
     - uses: php-actions/composer@v2
 
     - name: Install curl zip
@@ -33,7 +21,7 @@ jobs:
       run: vendor/bin/phpcs --standard=PSR12 src
 
     - name: PHPUnit
-      run: ls && vendor/bin/phpunit -c ./phpunit.xml
+      run: vendor/bin/phpunit -c ./phpunit.xml
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
