--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0"
+        "php": "^7.4 || ^8.0",
         "symfony/console": "^5.1",
-        "symfony/panther": "^0.8.0",
+        "symfony/panther": "^0.8.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^5.1",
