--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,14 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "symfony/console": "^5.1",
-        "symfony/panther": "^0.8.0"
+        "symfony/panther": "^1.0"
     },
     "require-dev": {
-        "symfony/var-dumper": "^5.1",
+        "dbrekelmans/bdi": "^0.3.0",
         "phpstan/phpstan": "^0.12.49",
-        "phpunit/phpunit" : ">=8.0",
-        "squizlabs/php_codesniffer": "^3.0"
+        "phpunit/phpunit": ">=8.0",
+        "squizlabs/php_codesniffer": "^3.0",
+        "symfony/var-dumper": "^5.1"
     },
     "autoload": {
         "psr-4": {
