--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -13,11 +13,18 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set release version
-      run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF:10}
+    - name: Define release variable
+      run: |
+          echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV
+
+    - name: Define version variables
+      run: |
+          echo "PATCH_VERSION="${RELEASE_VERSION:1} >> $GITHUB_ENV
+          echo "MINOR_VERSION="$(echo ${RELEASE_VERSION:1} | sed 's/\.[0-9]*$//') >> $GITHUB_ENV
+          echo "MAJOR_VERSION="$(echo ${RELEASE_VERSION:1} | sed 's/\.[0-9]*\.[0-9]*$//') >> $GITHUB_ENV
 
     - name: Build image
-      run: docker build -t docker.pkg.github.com/sigmie/crawler/crawler:${RELEASE_VERSION:1} .
+      run: docker build -t docker.pkg.github.com/sigmie/crawler/crawler:${PATCH_VERSION} -t docker.pkg.github.com/sigmie/crawler/crawler:${MINOR_VERSION} -t docker.pkg.github.com/sigmie/crawler/crawler:${MAJOR_VERSION} .
 
     - name: Authenticate docker
       run: docker login docker.pkg.github.com --username nicoorfi --password ${{ secrets.GITHUB_TOKEN }}
