--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -24,14 +24,14 @@ jobs:
           echo "MAJOR_VERSION="$(echo ${RELEASE_VERSION:1} | sed 's/\.[0-9]*\.[0-9]*$//') >> $GITHUB_ENV
 
     - name: Build image
-      run: docker build -t docker.pkg.github.com/sigmie/crawler/crawler:${PATCH_VERSION} -t docker.pkg.github.com/sigmie/crawler/crawler:${MINOR_VERSION} -t docker.pkg.github.com/sigmie/crawler/crawler:${MAJOR_VERSION} .
+      run: docker build -t ghcr.io/sigmie/crawler:${PATCH_VERSION} -t ghcr.io/sigmie/crawler:${MINOR_VERSION} -t ghcr.io/sigmie/crawler:${MAJOR_VERSION} .
 
     - name: Authenticate docker
       run: docker login docker.pkg.github.com --username nicoorfi --password ${{ secrets.GITHUB_TOKEN }}
 
     - name: Push images
       run: |
-        docker push docker.pkg.github.com/sigmie/crawler/crawler:${MINOR_VERSION}
-        docker push docker.pkg.github.com/sigmie/crawler/crawler:${MAJOR_VERSION}
-        docker push docker.pkg.github.com/sigmie/crawler/crawler:${PATCH_VERSION}
+        docker push ghcr.io/sigmie/crawler:${MINOR_VERSION}
+        docker push ghcr.io/sigmie/crawler:${MAJOR_VERSION}
+        docker push ghcr.io/sigmie/crawler:${PATCH_VERSION}
 
